# Rivik

./: '  Cargo.toml  think.md
.cargo/: config.toml
assets/: chibi.mtl  cube.mtl  fighter.mtl  fighter_smooth.mtl  sphere.mtl
examples/: build_lump.rs  demo.rs  hello_3d.rs  hello_world.rs  manifest.rs  read_lump.rs  shader.rs
mesher/: Cargo.toml
mesher/src/: main.rs
render-facade/: Cargo.toml
render-facade/src/: lib.rs
rivik-asset-packer/: Cargo.toml  bar  packed
rivik-asset-packer/src/: compress.rs  lib.rs  main.rs  manifest.rs  pack.rs
rivik-assets/: Cargo.toml
rivik-assets/examples/: chunk.rs  obj.rs
rivik-assets/src/: bin.rs  handle.rs  lib.rs  lump.rs  mgr.rs  path.rs
rivik-assets/src/formats/: mesh.rs  misc.rs
rivik-assets/src/formats/img/: general.rs
rivik-assets/src/formats/mesh/: obj.rs
rivik-assets/src/formats/misc/: bin.rs  txt.rs
rivik-deferred/: Cargo.toml
rivik-deferred/examples/: cube.mesh  deferred.rs  sphere.mesh
rivik-deferred/src/: context.rs  frame.rs  gbuffer.rs  lib.rs
rivik-deferred/src/inputs/: material.rs  sampler.rs  sun_light.rs  transform.rs  vertex.rs
rivik-deferred/src/pipes/: ambient.rs  ambient.wgsl  mesh.rs  mesh.wgsl  sun.rs  sun.wgsl
rivik-render/: Cargo.toml
rivik-render-types/: Cargo.toml  render-types.geany
rivik-render-types/src/: lib.rs  light.rs  material.rs  mesh.rs  mock.rs  tex.rs  vertex.rs
rivik-render/examples/: demo.rs  simple.rs
rivik-render/src/: context.rs  frame.rs  lib.rs  render_job.rs  sampler.rs  tracing.rs  transform.rs
rivik-render/src/draw/: mesh.rs  pixel_mesh.rs  skymesh.rs
rivik-render/src/filters/: display.rs
rivik-render/src/jobs/: deferred.rs  frustum_cull.rs
rivik-render/src/jobs/deferred/: geom.rs  light.rs
rivik-render/src/lights/: ambient.rs  sun.rs
rivik-render/src/load/: mesh.rs  tex.rs
rivik-render/src/pass/: geom.rs
rivik-render/src/pipeline/: ambient.rs  display.rs  gbuffer.rs  mesh.rs  output.wgsl  shader.wgsl  simple.rs  sky_box.rs  sun.rs  vertex3d.rs
rivik-render/src/shaders/: ambient.wgsl  display.wgsl  mesh.wgsl  simple3d.wgsl  skybox.wgsl  sun.wgsl
rivik-scene/: Cargo.toml
rivik-scene/src/: lib.rs
rivik-script/: Cargo.toml
rivik-script/src/: lib.rs  main.rs
rivik-shader/: Cargo.toml
rivik-shader/src/: lib.rs
rivik-shader/src/prims/: f32.rs
src/: context.rs  frame.rs  lib.rs  load.rs  main.rs  old.rs  render.rs  scene.rs  tracing.rs  transform.rs
src/collision/: mod.rs  sat.rs
src/collision/shapes/: aabb.rs  bbox.rs  sphere.rs
src/draw/: mesh.rs  pixel_mesh.rs  skymesh.rs
src/filters/: display.rs
src/input/: handler.rs  keys.rs
src/lights/: ambient.rs  sun.rs
src/load/: mesh.rs  tex.rs
src/physics/: body.rs  kinematic.rs
src/pipeline/: ambient.rs  display.rs  gbuffer.rs  mesh.rs  output.wgsl  simple.rs  sun.rs
src/plugins/: life_cycle.rs  render.rs
src/shaders/: ambient.wgsl  mesh.wgsl  simple3d.wgsl  skybox.wgsl  sun.wgsl
toml-scene/: Cargo.toml
toml-scene/examples/: scene.rs  scene.toml
toml-scene/src/: lib.rs
