[package]
name = "rivik_render"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
winit = "0.27.2"
pollster = "0.2.5"
reerror = {version = "0.2", features = ["wgpu", "image"], registry = "rapdorian"}
log = "0.4.16"
ultraviolet = {version = "0.9.0", features = ["mint"]}
image = "0.24.3"
assets = { package= "rivik_assets", version = "0.1", registry = "rapdorian" }
once_cell = "1.16.0"
bytemuck = {version = "1", features = [ "derive" ]}
wgpu_macros = "0.1.0"

[dev-dependencies]
env_logger = "0.9.0"
tobj = "3.2.2"
renderdoc = "0.10.1"
rand = "0.8.5"
