[package]
name = "rivik_render"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.1"
winit = "0.28.3"
pollster = "0.2.5"
log = "0.4.16"
ultraviolet = {version = "0.9.0", features = ["mint"]}
image = "0.24.3"
assets = { package = "rivik_assets", git = "https://github.com/Rapdorian/rivik_assets.git", tag = "v0.2.0" }
once_cell = "1.16.0"
bytemuck = {version = "1", features = [ "derive" ]}
wgpu_macros = "0.1.0"

snafu = "0.7.4"

egui = "0.21.0"
egui-wgpu = "0.21.0"
tracing = "0.1.37"
palette = "0.6.1"
tracing-core = "0.1.30"
tracing-subscriber = "0.3.16"

[dev-dependencies]
env_logger = "0.9.0"
tobj = "3.2.2"
renderdoc = "0.10.1"
rand = "0.8.5"
egui-winit = "0.21.1"
color-backtrace = "0.5.1"
