[package]
name = "rivik"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
rivik-render = { path = "rivik-render" }
rivik-assets = { path = "rivik-assets" }
rivik-scene = { path = "rivik-scene" }

egui-winit = "0.21.1"
winit = "0.28.3"
pollster = "0.3.0"
color-backtrace = "0.5.1"

glam = {version = "0.23.0" , features= ["mint"]}
tracing = "0.1.37"
wgpu = "0.15.1"
mint = "0.5.9"
legion = "0.4.0"

[dev-dependencies]
tracing-subscriber = "0.3.16"
rivik-shader = { path = "rivik-shader" }
snafu = "0.7.4"
toml = "0.7.3"
asset-packer = { path = "rivik-asset-packer" }

[workspace]
resolver = "2"
members = [
    "rivik-render", "rivik-assets", "rivik-scene", "rivik-shader", "rivik-asset-packer"
]
