[package]
name = "asset-packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.2.2", features = ["derive"] }
fasthash = "0.4.0"
serde = { version = "1.0.160", features = ["derive"] }
snafu = "0.7.4"
color-backtrace = "0.5.1"
brotli = "3.3.4"
rust-lzma = "0.6.0"
flate2 = "1.0.25"
toml = "0.7.3"
