[package]
name = "rivik-deferred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rivik-render-types.path = "../rivik-render-types"
wgpu = "0.16.1"
once_cell = "1.17.1"
raw-window-handle = "0.5.2"
pollster = "0.3.0"
snafu = "0.7.4"
bytemuck = {version="1.13.1", features = ["extern_crate_alloc"]}
glam = {version = "0.24.0", features = ["mint", "bytemuck"]}
mint = "0.5.9"

[dev-dependencies]
winit = "0.28.6"
image = "0.24.6"
include_bytes_aligned = "0.1.2"
