[package]
name = "rivik-render-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.13.1", features = ["derive"]}
egui = "0.21.0"
raw-window-handle = "0.5.2"
mint = "0.5.9"
serde = {version = "1.0.163", features = ["derive"]}
